slurm-208420.out
Wed Apr 16 20:52:58 EDT 2025
Running on node: spdr18
no change     /usr/local/sw/anaconda/anaconda3/condabin/conda
no change     /usr/local/sw/anaconda/anaconda3/bin/conda
no change     /usr/local/sw/anaconda/anaconda3/bin/conda-env
no change     /usr/local/sw/anaconda/anaconda3/bin/activate
no change     /usr/local/sw/anaconda/anaconda3/bin/deactivate
no change     /usr/local/sw/anaconda/anaconda3/etc/profile.d/conda.sh
no change     /usr/local/sw/anaconda/anaconda3/etc/fish/conf.d/conda.fish
no change     /usr/local/sw/anaconda/anaconda3/shell/condabin/Conda.psm1
no change     /usr/local/sw/anaconda/anaconda3/shell/condabin/conda-hook.ps1
no change     /usr/local/sw/anaconda/anaconda3/lib/python3.9/site-packages/xontrib/conda.xsh
no change     /usr/local/sw/anaconda/anaconda3/etc/profile.d/conda.csh
no change     /home/km3nc/.bashrc
No action taken.
Starting distillation training...
/usr/local/sw/anaconda/anaconda3/lib/python3.9/site-packages/torch/utils/_pytree.py:185: FutureWarning: optree is installed but the version is too old to support PyTorch Dynamo in C++ pytree. C++ pytree support is disabled. Please consider upgrading optree using `python3 -m pip install --upgrade 'optree>=0.13.0'`.
  warnings.warn(
W0416 20:53:01.231120 1016755 site-packages/torch/distributed/run.py:792] 
W0416 20:53:01.231120 1016755 site-packages/torch/distributed/run.py:792] *****************************************
W0416 20:53:01.231120 1016755 site-packages/torch/distributed/run.py:792] Setting OMP_NUM_THREADS environment variable for each process to be 1 in default, to avoid your system being overloaded, please further tune the variable for optimal performance in your application as needed. 
W0416 20:53:01.231120 1016755 site-packages/torch/distributed/run.py:792] *****************************************
  File "/home/km3nc/babylm/grid-search.py", line 22
    from dkds-noaux import DeepSupervisionDistillationTrainer, DistillationTrainingArguments
             ^
SyntaxError: invalid syntax
  File "/home/km3nc/babylm/grid-search.py", line 22
    from dkds-noaux import DeepSupervisionDistillationTrainer, DistillationTrainingArguments
             ^
SyntaxError: invalid syntax
E0416 20:53:01.349483 1016755 site-packages/torch/distributed/elastic/multiprocessing/api.py:869] failed (exitcode: 1) local_rank: 0 (pid: 1016788) of binary: /usr/local/sw/anaconda/anaconda3/bin/python
Traceback (most recent call last):
  File "/usr/local/sw/anaconda/anaconda3/bin/torchrun", line 8, in <module>
    sys.exit(main())
  File "/usr/local/sw/anaconda/anaconda3/lib/python3.9/site-packages/torch/distributed/elastic/multiprocessing/errors/__init__.py", line 355, in wrapper
    return f(*args, **kwargs)
  File "/usr/local/sw/anaconda/anaconda3/lib/python3.9/site-packages/torch/distributed/run.py", line 918, in main
    run(args)
  File "/usr/local/sw/anaconda/anaconda3/lib/python3.9/site-packages/torch/distributed/run.py", line 909, in run
    elastic_launch(
  File "/usr/local/sw/anaconda/anaconda3/lib/python3.9/site-packages/torch/distributed/launcher/api.py", line 138, in __call__
    return launch_agent(self._config, self._entrypoint, list(args))
  File "/usr/local/sw/anaconda/anaconda3/lib/python3.9/site-packages/torch/distributed/launcher/api.py", line 269, in launch_agent
    raise ChildFailedError(
torch.distributed.elastic.multiprocessing.errors.ChildFailedError: 
============================================================
grid-search.py FAILED
------------------------------------------------------------
Failures:
[1]:
  time      : 2025-04-16_20:53:01
  host      : spdr18.cluster
  rank      : 1 (local_rank: 1)
  exitcode  : 1 (pid: 1016789)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
------------------------------------------------------------
Root Cause (first observed failure):
[0]:
  time      : 2025-04-16_20:53:01
  host      : spdr18.cluster
  rank      : 0 (local_rank: 0)
  exitcode  : 1 (pid: 1016788)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
============================================================
Command exited with non-zero status 1
	Command being timed: "torchrun --nproc_per_node=2 grid-search.py"
	User time (seconds): 1.70
	System time (seconds): 1.05
	Percent of CPU this job got: 127%
	Elapsed (wall clock) time (h:mm:ss or m:ss): 0:02.15
	Average shared text size (kbytes): 0
	Average unshared data size (kbytes): 0
	Average stack size (kbytes): 0
	Average total size (kbytes): 0
	Maximum resident set size (kbytes): 437960
	Average resident set size (kbytes): 0
	Major (requiring I/O) page faults: 0
	Minor (reclaiming a frame) page faults: 112130
	Voluntary context switches: 4424
	Involuntary context switches: 42
	Swaps: 0
	File system inputs: 24
	File system outputs: 48
	Socket messages sent: 0
	Socket messages received: 0
	Signals delivered: 0
	Page size (bytes): 4096
	Exit status: 1
